docker/tck-reports/tck-execution-final.log
==========================================
NemakiWare TCK Test Execution
==========================================
✓ Found core container: docker-core-1
✓ Docker containers are running
Testing connectivity to NemakiWare core service...
✓ Core service is accessible
Preparing TCK configuration for Docker environment...
Using existing DockerTckRunner.java (no overwrite needed)
Building TCK test package...
Compiling comprehensive TCK test classes...
Running comprehensive query testing and fixes...
=== Comprehensive CMIS Query Testing ===
Using core container: docker-core-1
1. Fixing Solr connectivity and repository ID issues:
=== Fixing Solr Connectivity Issues ===
Core container: docker-core-1
Solr container: docker-solr-1

1. Checking current Solr configuration in core:
cat: /usr/local/tomcat/nemakiware/nemakiware.properties: No such file or directory

2. Testing Solr connectivity from core container:
✓ Core can connect to Solr

3. Checking repository ID mismatch:
Total documents: 30
Repository bedroom: 29 documents
Repository canopy: 1 documents

4. Updating repository IDs to 'bedroom':
Updating 1 documents to bedroom repository
Update status: 200

5. Verifying fix:
Documents in bedroom repository: 30

2. Testing individual CMIS queries:
=== Testing Individual CMIS Queries ===
1. Testing basic folder query:

2. Testing root folder by ID query:

3. Testing document query:

4. Testing simple name query:

3. Checking enhanced query debug logs:
17-Jun-2025 04:35:26.312 INFO [main] org.apache.catalina.startup.HostConfig.deployDescriptor Deployment of deployment descriptor [/usr/local/tomcat/conf/Catalina/localhost/core.xml] has finished in [27,415] ms
17-Jun-2025 04:35:26.315 INFO [main] org.apache.coyote.AbstractProtocol.start Starting ProtocolHandler ["http-nio-8080"]
17-Jun-2025 04:35:26.324 INFO [main] org.apache.catalina.startup.Catalina.start Server startup in [27454] milliseconds
No enhanced debug logs found

4. Verifying Solr index population:
Documents in bedroom repository: 30
✓ Solr index is properly populated for bedroom repository

5. Testing root folder query specifically:
  File "<string>", line 1
    import urllib.parse; print(urllib.parse.quote('SELECT cmis:name, cmis:objectId FROM cmis:folder WHERE cmis:objectId = 'e02f784f8360a02cc14d1314c10038ff''))
                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
✗ Root folder query returned no results
Response preview:
<html><head><title>Apache Chemistry OpenCMIS - invalidArgument error</title><style><!--H1 {font-size:24px;line-height:normal;font-weight:bold;background-color:#f0f0f0;color:#003366;border-bottom:1px solid #3c78b5;padding:2px;} BODY {font-family:Verdana,arial,sans-serif;color:black;font-size:14px;} HR {color:#3c78b5;height:1px;}--></style></head><body><h1>HTTP Status 400 - <!--exception-->invalidArgument<!--/exception--></h1><p><!--message-->Statement must be set!<!--/message--></p></body></html>

6. Ready for comprehensive TCK execution
Executing comprehensive TCK tests (using standard OpenCMIS test groups)...
Using direct Maven surefire execution (bypassing Jetty completely)...
Running comprehensive TCK tests via direct surefire plugin...
Generating comprehensive TCK reports...
==========================================
NemakiWare TCK Report Generation
==========================================
Parsing TCK test results...
./generate-tck-report.sh: line 30: [: 0
0: integer expression expected

==========================================
TCK TEST RESULTS SUMMARY
==========================================
Total Tests:    0
0
Passed:         0
0
Failed:         0
0
Skipped:        0
0
Pass Rate:      0%
==========================================

Reports generated:
  - Text Report:    /home/ubuntu/repos/NemakiWare/docker/tck-reports/tck-report.txt
  - XML Report:     /home/ubuntu/repos/NemakiWare/docker/tck-reports/tck-report.xml
  - HTML Summary:   /home/ubuntu/repos/NemakiWare/docker/tck-reports/tck-summary.html

Quality Management Score: 0%

TCK report generation completed!
Generating enhanced summary with user's reporting script...
==========================================
NemakiWare CMIS TCK Test Report Summary
==========================================
Report Date:  Mon Jun 16 07:41:31 UTC 2025

Configuration:
  org.apache.chemistry.opencmis.binding.atompub.url = http://localhost:8080/core/atom/bedroom
  org.apache.chemistry.opencmis.binding.spi.type = atompub
  org.apache.chemistry.opencmis.password = admin
  org.apache.chemistry.opencmis.session.repository.id = bedroom
  org.apache.chemistry.opencmis.user = admin

Test Results:
  Total Tests: 208
  Passed:      70 (33%)
  Failed:      132 (63%)
  Warnings:    6 (2%)

Test Groups:
  - Basics Test Group (ATOMPUB)
  - ---------------------------------------------------------------
  - Control Test Group (ATOMPUB)
  - ---------------------------------------------------------------
  - Filing Test Group (ATOMPUB)
  - ---------------------------------------------------------------
  - Query Test Group (ATOMPUB)
  - ---------------------------------------------------------------
  - Types Test Group (ATOMPUB)
  - ---------------------------------------------------------------
  - Versioning Test Group (ATOMPUB)
  - ---------------------------------------------------------------

Top Failure Categories:
  10× This query is invalid and an unexcepted exception
  4× Folder query should return exactly one hit, but returned 0.
  4× Document query should return exactly one hit, but returned 0.
  2× The query should return the root folder but does not!
  2× The query should return exactly one result but returned 0!

Detailed reports available in:
  Text: /home/ubuntu/repos/NemakiWare/docker/tck-reports/tck-report.txt
  XML:  /home/ubuntu/repos/NemakiWare/docker/tck-reports/tck-report.xml

Sample Failed Tests:
INFO: Query: SELECT cmis:name AS folderName, cmis:objectId AS folderId FROM cmis:folder WHERE cmis:objectId = 'e02f784f8360a02cc14d1314c10038ff' (QueryRootFolderTest.java:78)

FAILURE: The query should return exactly one result but returned 0! (QueryRootFolderTest.java:96)
INFO: expected: 1 / actual: 0

FAILURE: The query returned a total number of items != 1, but there can be only exactly one hit! (QueryRootFolderTest.java:101)
INFO: expected: 1 / actual: 0
INFO: Query: SELECT cmis:name AS folderName, cmis:objectId AS folderId FROM cmis:folder WHERE cmis:creationDate > TIMESTAMP '2012-12-31T23:00:00.000Z' AND cmis:creationDate < TIMESTAMP '2013-01-01T01:00:00.000Z' (QueryRootFolderTest.java:129)

FAILURE: The query should return the root folder but does not! (QueryRootFolderTest.java:148)
INFO: False!

FAILURE: The query returned a total number of items < 1, but there must be at least one hit! (QueryRootFolderTest.java:153)
INFO: False!

==========================================
Validating TCK improvements and generating final reports...
=== Validating TCK Test Improvements ===
1. Analyzing current TCK results:
Could not parse test results from execution log

2. Checking for query-specific improvements:
Query-related test entries found: 0
⚠ Root folder query tests not found in logs

3. Generating final summary report:
Summary report generated: /home/ubuntu/repos/NemakiWare/docker/tck-reports/improvement-summary.txt
✓ TCK test execution completed successfully!
Reports available in: /home/ubuntu/repos/NemakiWare/docker/tck-reports/
total 196
drwxr-xr-x 2 ubuntu ubuntu  4096 Jun 17 04:35 .
drwxr-xr-x 8 ubuntu ubuntu  4096 Jun 17 03:08 ..
-rw-r--r-- 1 ubuntu ubuntu     2 Jun 17 04:36 current-score.txt
-rw-r--r-- 1 ubuntu ubuntu  3109 Jun 17 03:08 final-tck-results.txt
-rw-r--r-- 1 ubuntu ubuntu   468 Jun 17 04:36 improvement-summary.txt
-rw-r--r-- 1 ubuntu ubuntu   594 Jun 17 04:36 score-history.txt
-rw-r--r-- 1 ubuntu ubuntu 12801 Jun 17 03:08 tck-execution-current.log
-rw-r--r-- 1 ubuntu ubuntu  7567 Jun 17 04:36 tck-execution-final.log
-rw-r--r-- 1 ubuntu ubuntu 17504 Jun 17 03:08 tck-execution-fixed.log
-rw-r--r-- 1 ubuntu ubuntu 17509 Jun 17 03:08 tck-execution-gateway.log
-rw-r--r-- 1 ubuntu ubuntu 17499 Jun 17 03:08 tck-execution-host.log
-rw-r--r-- 1 ubuntu ubuntu   901 Jun 17 04:36 tck-execution.log
-rw-r--r-- 1 ubuntu ubuntu 40905 Jun 17 03:08 tck-report.txt
-rw-r--r-- 1 ubuntu ubuntu 38828 Jun 17 03:08 tck-report.xml
-rw-r--r-- 1 ubuntu ubuntu  2732 Jun 17 04:36 tck-summary.html
Current TCK Score: 0%

=== IMPROVEMENT SUMMARY ===
=== NemakiWare TCK Test Improvement Summary ===
Date: Tue Jun 17 04:36:00 UTC 2025
Target: >75% pass rate
Previous: 70.12% (108/154 tests)

Current Results:
- Total Tests: N/A
- Passed: N/A
- Pass Rate: N/A%

Key Improvements Applied:
1. Enhanced CMIS query debug logging
2. Fixed Solr connectivity issues
3. Resolved repository ID mismatches
4. Improved property mapping error handling
5. Added comprehensive query translation logging

Status: NEEDS FURTHER WORK ⚠
